# gst-exam

./: CMakeLists.txt
benchmark/: README.md
cmdlinetools/: README.md
examples/: CMakeLists.txt  ex10_1.c  ex4_1.c  ex4_2.c  ex5_2a.c  ex5_3.c  ex5_4_1.c  ex6_2.c
mmexamples/: .clang_complete  CMakeLists.txt  all_media_player.cc  audio_video_muxer.cc  bin.cc  bus.cc  dynamic_changing_element.cc  dynamic_changing_source.cc  dynamic_pads.cc  element_factory.cc  element_link.cc  hello_world.cc  init_gstreamermm.cc  nvcam_rtmp.cc  tee_request_pad.cc  typefind.cc  videotestsrc_videomixer_videosink.cc
tutorial/: CMakeLists.txt  basic-tutorial-1.c  basic-tutorial-12.c  basic-tutorial-13.c  basic-tutorial-2.c  basic-tutorial-3.c  basic-tutorial-4.c  basic-tutorial-6.c  basic-tutorial-7.c  basic-tutorial-8.c  basic-tutorial-9.c
